--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "alpinejs": "^3.0.6",
     "autoprefixer": "^10.4.7",
     "axios": "^0.21",
+    "cross-env": "^5.1",
     "cssnano": "^5.1.14",
-    "laravel-mix": "^6.0.6",
+    "laravel-mix": "^6.0.49",
     "lodash": "^4.17.19",
     "pixrem": "^5.0.0",
     "postcss": "^8.4.20",
@@ -26,9 +27,8 @@
     "postcss-pseudoelements": "^5.0.0",
     "postcss-vmin": "^3.0.0",
     "postcss-will-change": "^4.0.1",
-    "tailwindcss": "^3.1.0",
-    "cross-env": "^5.1",
-    "resolve-url-loader": "^3.1.2"
+    "resolve-url-loader": "^3.1.2",
+    "tailwindcss": "^3.1.0"
   },
   "browserslist": [
     ">0.001%"
